Justified the sheet

--- a/module-2/task/start/styles/styles.css
+++ b/module-2/task/start/styles/styles.css
@@ -1,6 +1,22 @@
-a{ 
+a   { 
         color:grey;
         font-size:  18px;
         pad
         
+    }
+
+    header {
+        display:flex;
+        width: 90%;
+        margin:0 auto;
+        justify-content: space-evenly;
+        align-items:centre;
+    }
+
+    ol {
+
+        display:flex;
+        justify-content: space-evenly;
+        width: 380px;
+
     }
