Adding footer - copyright

--- a/module-2/final_project/start/styles/styles.css
+++ b/module-2/final_project/start/styles/styles.css
@@ -39,7 +39,15 @@ body {
     background : green;
 }
 
+header .logoContainer{
+    width:300px;
+    margin:0 auto;
 
+}
 img{
-    max: width 100%;
+    max-width:  100%;
+}
+.copyrightContainer{
+    font-size: 22px;
+    text-align:center;
 }
